--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Pagina principal</h1>
-    <a href="pagina2.html">Ir a pagina 2</a>
+    <a href="pagina/redbull.html">Ir redbull</a>
   </body>
 </html>
