--- a/pagina/redbull.html
+++ b/pagina/redbull.html
@@ -1,1 +1,10 @@
-
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <title>REDBULL</title>
+  </head>
+  <body>
+    <h1>Pagina 2</h1>
+    <a href="index.html">Ir a pagina</a>
+  </body>
+</html>
