--- a/pagina/redbull.html
+++ b/pagina/redbull.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Pagina 2</h1>
-    <a href="index.html">Ir a pagina</a>
+    <a href="../index.html">Ir a pagina</a>
   </body>
 </html>
