--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   <body>
     <h1>Pagina principal</h1>
     <a href="pagina/redbull.html">Ir redbull</a>
+    <br>
+    <img_src="img/descarga.jfif" width="200" height="100"
+      
   </body>
 </html>
