--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>Pagina principal</h1>
     <a href="pagina/redbull.html">Ir redbull</a>
     <br>
-    <img_src="img/descarga.jfif" width="200" height="100"
+    <img src="img/descarga.jfif" width="200" height="100"
       
   </body>
 </html>
