--- a/pagina/redbull.html
+++ b/pagina/redbull.html
@@ -6,5 +6,7 @@
   <body>
     <h1>Pagina 2</h1>
     <a href="../index.html">Ir a pagina</a>
+    <br>
+    <img src="../img/agera.jfif" width="400" height="300">
   </body>
 </html>
